--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=doc-parser
+
+# Car brand to model mapping configuration
+# Format: Brand1=Model1,Brand2=Model2,...
+car.brand.mapping=Toyota=RAV4,Honda=Civic,Ford=F-150,Tesla=Model X,BMW=330i,Audi=Q5,Chevrolet=Silverado,Mercedes-Benz=C-Class,Nissan=Rogue,Hyundai=Elantra
