--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.xmlunit</groupId>
+			<artifactId>xmlunit-assertj</artifactId>
+			<version>2.9.1</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- REMOVED Log4j2 Core - it conflicts with Logback -->
 	</dependencies>
 
