--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<version>2.9.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.15.2</version>
+		</dependency>
 		<!-- REMOVED Log4j2 Core - it conflicts with Logback -->
 	</dependencies>
 
